samples/_failures_safe/1761608115_dee9b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e86b078.c:118:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  118 | int pointcloud_add_point
      | ^~~
